# agent-readiness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/readiness-report/: SKILL.md
.claude/skills/readiness-report/templates/: summary.md
docs/: readiness-report-research.md
docs/plans/: 2026-02-25-html-dashboard-design.md  2026-02-25-html-dashboard-implementation.md  2026-02-25-html-dashboard-implementation.md.tasks.json  2026-02-25-readiness-report-clone-design.md  2026-02-25-readiness-report-clone-implementation.md
rubric/droid/v0.62.1/: criteria_order.txt  criteria_scope.json  provenance.json  scoring_rules.json
rubric/droid/v0.62.1/remediation/: agentic_development.md  agents_md.md  agents_md_validation.md  alerting_configured.md  api_schema_docs.md  automated_doc_generation.md  automated_pr_review.md  automated_security_review.md  backlog_health.md  (+72 more)
scripts/: extract_droid_rubric.py
src/agent_readiness/: __init__.py  artifacts.py  cli.py  command_runner.py  criteria.py  discovery.py  models.py  persister.py  rubric.py  runner.py  scoring.py  validator.py
src/agent_readiness/evaluators/: __init__.py  base.py  registry.py
src/agent_readiness/templates/: dashboard.html
tests/: conftest.py  test_artifacts.py  test_cli.py  test_command_runner.py  test_discovery.py  test_evaluators.py  test_plan_smoke.py  test_readme_commands.py  test_registry_coverage.py  test_remediation_coverage.py  test_rubric_loader.py  test_rubric_snapshot.py  test_runner_orchestration.py  test_scoring.py  test_skill_presence.py  test_validator_contract.py
